TENTATIVE - trying to filter out accesses to attributes that are not used for partitioning